added Loti animations

--- a/index.html
+++ b/index.html
@@ -110,12 +110,11 @@
     <!-- ======= Services Section ======= -->
     <section class="services">
       <div class="container">
-      <!-- <lottie-player src="https://assets2.lottiefiles.com/packages/lf20_v6VxZo.json"  background="transparent"  speed="1"  style="width: 300px; height: 300px;"  loop autoplay></lottie-player> -->
 
         <div class="row">
           <div class="col-md-6 col-lg-3 d-flex align-items-stretch" data-aos="fade-up">
             <div class="icon-box icon-box-pink">
-              <div class="icon"><i class="bx bxl-dribbble"></i></div>
+              <lottie-player src="https://assets7.lottiefiles.com/packages/lf20_KO31Fh.json"  background="transparent"  speed="1"  style="height: 150px;"  loop autoplay></lottie-player>
               <h4 class="title"><a href="">AI algorithm</a></h4>
               <p class="description">
                 Upon starting the app, you will be greeted with a set of songs. This, along with your music listening activity will allow Houdini to reccomend you 
@@ -128,7 +127,9 @@
           <div class="col-md-6 col-lg-3 d-flex align-items-stretch" data-aos="fade-up" data-aos-delay="100">
             <div class="icon-box icon-box-cyan">
               <!-- <div class="icon"><i class="bx bx-file"></i></div> -->
-              <lottie-player src="https://assets3.lottiefiles.com/packages/lf20_b8ofyxmg.json"  background="transparent"  speed="1"  style="width: 300px; height: 300px;"  loop controls autoplay></lottie-player>
+              <lottie-player src="https://assets3.lottiefiles.com/packages/lf20_b8ofyxmg.json"  background="transparent"  speed="1"  style="height: 150px;"  loop autoplay></lottie-player>
+              
+
               <h4 class="title"><a href="">Control Sound Quality</a></h4>
               <p class="description">
                 Song has too little bass? No worries because with Houdini, you can add boost your bass, control sorround sound, and even choose from the avalaible reverb presets!
@@ -138,16 +139,17 @@
 
           <div class="col-md-6 col-lg-3 d-flex align-items-stretch" data-aos="fade-up" data-aos-delay="200">
             <div class="icon-box icon-box-green">
-              <div class="icon"><i class="bx bx-tachometer"></i></div>
-              <h4 class="title"><a href="">Listen to songs offline</a></h4>
+                <lottie-player src="https://assets4.lottiefiles.com/packages/lf20_uBcBWV/download.json"  background="transparent"  speed="1"  style="height: 150px;"  loop autoplay></lottie-player>
+                <h4 class="title"><a href="">Listen to songs offline</a></h4>
               <p class="description"> No need to use your crucial data on your music anymore. Easily download hundreds of songs onto the app and take them with you wherever you go.</p>
             </div>
           </div>
 
           <div class="col-md-6 col-lg-3 d-flex align-items-stretch" data-aos="fade-up" data-aos-delay="200">
             <div class="icon-box icon-box-blue">
-              <div class="icon"><i class="bx bx-world"></i></div>
-              <h4 class="title"><a href="">Social Media Platform</a></h4>
+                
+                <lottie-player src="https://assets6.lottiefiles.com/packages/lf20_wl5xqfbq.json"  background="transparent"  speed="1"  style="height: 150px;"  loop autoplay></lottie-player>
+                <h4 class="title"><a href="">Social Media Platform</a></h4>
               <p class="description">
                 Music can be a social activity and we realize that at Houdini. This is why we have built a series of tools and features for you to interact with other users and 
                 curate playlists together. 
