added images, faq, pricing pages

--- a/index.html
+++ b/index.html
@@ -70,8 +70,11 @@
       <!-- Slide 1 -->
       <div class="carousel-item active">
         <div class="carousel-container">
+          <lottie-player src="https://assets3.lottiefiles.com/packages/lf20_b8ofyxmg.json"  background="transparent"  speed="1"  style="height: 150px;"  loop autoplay></lottie-player>
+
           <h2 class="animate__animated animate__fadeInDown">Welcome to <span>Houdini Music</span></h2>
           <p class="animate__animated animate__fadeInUp">A music app that learns your taste and reccomends only your favorite songs.</p>
+
           <!-- <a href="" class="btn-get-started animate__animated animate__fadeInUp">Read More</a> -->
         </div>
       </div>
@@ -127,8 +130,7 @@
           <div class="col-md-6 col-lg-3 d-flex align-items-stretch" data-aos="fade-up" data-aos-delay="100">
             <div class="icon-box icon-box-cyan">
               <!-- <div class="icon"><i class="bx bx-file"></i></div> -->
-              <lottie-player src="https://assets3.lottiefiles.com/packages/lf20_b8ofyxmg.json"  background="transparent"  speed="1"  style="height: 150px;"  loop autoplay></lottie-player>
-              
+              <lottie-player src="https://assets4.lottiefiles.com/packages/lf20_lyhyH3.json"  background="transparent"  speed="1"  style="height: 150px;"  loop autoplay></lottie-player>
 
               <h4 class="title"><a href="">Control Sound Quality</a></h4>
               <p class="description">
@@ -175,25 +177,250 @@
           <div class="col-lg-6 d-flex flex-column justify-content-center p-5">
 
             <div class="icon-box">
-              <div class="icon"><i class="bx bx-fingerprint"></i></div>
-              <h4 class="title"><a href="">Lorem Ipsum</a></h4>
-              <p class="description">Voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non provident</p>
+              <div style = "display: flex; justify-content: center;"> 
+              <img style = "height: 100px; cursor: pointer;" src="assets/img/android.png" alt="">
+              <img style = "height: 100px; cursor: pointer;"  src="assets/img/apple_store.png" alt="">
+
+            </div>
+            <h3 style = "text-align: center;">Give the app a try on your platform of choice! We also have a desktop application!</h3>
+
+              <!-- <div class="icon"><i class="bx bx-fingerprint"></i></div> -->
+              <!-- <h4 class="title"><a href="">Lorem Ipsum</a></h4> -->
             </div>
 
-            <div class="icon-box">
+            <!-- <div class="icon-box">
               <div class="icon"><i class="bx bx-gift"></i></div>
               <h4 class="title"><a href="">Nemo Enim</a></h4>
               <p class="description">At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque</p>
-            </div>
+            </div> -->
 
           </div>
         </div>
 
       </div>
     </section><!-- End Why Us Section -->
+    <section id="team" class="team section-bg">
+        <div class="container">
+  
+          <div class="section-title">
+            <h2>Team</h2>
+            <p>Our team consists of talented and diverse individuals!</p>
+          </div>
+  
+          <div class="row">
+  
+            <div class="col-lg-3 col-md-6 d-flex align-items-stretch">
+              <div class="member">
+                <div class="member-img">
+                  <img src="assets/img/team/team-1.jpeg" class="img-fluid" alt="">
+                  <div class="social">
+                    <a href=""><i class="bi bi-twitter"></i></a>
+                    <a href=""><i class="bi bi-facebook"></i></a>
+                    <a href=""><i class="bi bi-instagram"></i></a>
+                    <a href=""><i class="bi bi-linkedin"></i></a>
+                  </div>
+                </div>
+                <div class="member-info">
+                  <h4>Roshaan Siddiqui</h4>
+                  <span>CEO & Cofounder</span>
+                </div>
+              </div>
+            </div>
+  
+            <div class="col-lg-3 col-md-6 d-flex align-items-stretch">
+              <div class="member">
+                <div class="member-img">
+                  <img src="assets/img/team/team-2.jpeg" class="img-fluid" alt="">
+                  <div class="social">
+                    <a href=""><i class="bi bi-twitter"></i></a>
+                    <a href=""><i class="bi bi-facebook"></i></a>
+                    <a href=""><i class="bi bi-instagram"></i></a>
+                    <a href=""><i class="bi bi-linkedin"></i></a>
+                  </div>
+                </div>
+                <div class="member-info">
+                  <h4>Daniel Knopf</h4>
+                  <span>Cofounder & CTO</span>
+                </div>
+              </div>
+            </div>
+  
+            <div class="col-lg-3 col-md-6 d-flex align-items-stretch">
+              <div class="member">
+                <div class="member-img">
+                  <img src="assets/img/team/team-3.jpeg" class="img-fluid" alt="">
+                  <div class="social">
+                    <a href=""><i class="bi bi-twitter"></i></a>
+                    <a href=""><i class="bi bi-facebook"></i></a>
+                    <a href=""><i class="bi bi-instagram"></i></a>
+                    <a href=""><i class="bi bi-linkedin"></i></a>
+                  </div>
+                </div>
+                <div class="member-info">
+                  <h4>Cisco Vielma</h4>
+                  <span> Product Manager </span>
+                </div>
+              </div>
+            </div>
+  
+            <div class="col-lg-3 col-md-6 d-flex align-items-stretch">
+              <div class="member">
+                <div class="member-img">
+                  <img src="assets/img/team/team-4.jpeg" class="img-fluid" alt="">
+                  <div class="social">
+                    <a href=""><i class="bi bi-twitter"></i></a>
+                    <a href=""><i class="bi bi-facebook"></i></a>
+                    <a href=""><i class="bi bi-instagram"></i></a>
+                    <a href=""><i class="bi bi-linkedin"></i></a>
+                  </div>
+                </div>
+                <div class="member-info">
+                  <h4>Alex Henton</h4>
+                  <span>Chief Marketing Officer</span>
+                </div>
+              </div>
+            </div>
+  
+          </div>
+  
+        </div>
+      </section><!-- End Team Section -->
+      <!-- ======= Pricing Section ======= -->
+    <section id="pricing" class="pricing">
+        <div class="container">
+  
+          <div class="section-title">
+            <h2>Pricing</h2>
+            <p>Please take a look at the FAQ before purchasing. </p>
+          </div>
+  
+          <div class="row">
+  
+            <div class="col-lg-4 col-md-6">
+              <div class="box">
+                <h3>Free</h3>
+                <h4><sup>$</sup>0<span> / month</span></h4>
+                <ul>
+                  <li>Get up to 2 reccomended songs from Houdini</li>
+                  <li>Basic music sound quality tuning</li>
+                  <li class="na">Advertisement free music streaming</li>
+                  <li class="na">Unlmited Houdini Reccomendations</li>
+                  <li class="na">Advanced music sound quality tuning</li>
 
+                  <li></li>
+
+                </ul>
+                <div class="btn-wrap">
+                  <a href="#" class="btn-buy">Buy Now</a>
+                </div>
+              </div>
+            </div>
+  
+            <div class="col-lg-4 col-md-6 mt-4 mt-md-0">
+              <div class="box featured">
+                <h3>Solo</h3>
+                <h4><sup>$</sup>7.99<span> / month</span></h4>
+                <ul>
+                  <li>Advertisement free music streaming</li>
+                  <li>Unlmited Houdini Reccomendations</li>
+                  <li>Create unlimited playlists</li>
+                  <li>Advanced music sound quality tuning</li>
+                  <li class="na">Unlimited Users</li>
+                </ul>
+                <div class="btn-wrap">
+                  <a href="#" class="btn-buy">Buy Now</a>
+                </div>
+              </div>
+            </div>
+  
+            <div class="col-lg-4 col-md-6 mt-4 mt-lg-0">
+              <div class="box">
+                <h3>Family</h3>
+                <h4><sup>$</sup>9.99<span> / month</span></h4>
+                <ul>
+                    <li>Advertisement free music streaming</li>
+                    <li>Unlmited Houdini Reccomendations</li>
+                    <li>Create unlimited playlists</li>
+                    <li>Advanced music sound quality tuning</li>
+                    <li >Unlimited Users</li>
+                </ul>
+                <div class="btn-wrap">
+                  <a href="#" class="btn-buy">Buy Now</a>
+                </div>
+              </div>
+            </div>
+  
+          </div>
+  
+        </div>
+      </section><!-- End Pricing Section -->
+  
+      <!-- ======= Frequently Asked Questions Section ======= -->
+      <section id="faq" class="faq">
+        <div class="container">
+  
+          <div class="section-title">
+            <h2>Frequently Asked Questions</h2>
+          </div>
+  
+          <div class="row  d-flex align-items-stretch">
+  
+            <div class="col-lg-6 faq-item">
+              <i class="bx bx-help-circle"></i>
+              <h4>What platforms is the app avalaible on?</h4>
+              <p>
+The app is currently avalaible for android and iOS as well as through your internet browser!
+
+</p>
+            </div>
+  
+            <div class="col-lg-6 faq-item">
+              <i class="bx bx-help-circle"></i>
+              <h4>Where can I get help?</h4>
+              <p>
+                We have a 24/7 support team on duty to help you with whatever you need. You may reach out to them throuh the live chat option or by emailing info@houdiniapp.com
+              </p>
+            </div>
+  
+            <div class="col-lg-6 faq-item">
+              <i class="bx bx-help-circle"></i>
+              <h4>What is your refund policy?</h4>
+              <p>
+                If you are not happy with the Houdini, no need to worry because we gaurantee a full refund upto 30 days of purchase. Please email the support team or open a ticket. 
+              </p>
+            </div>
+  
+            <div class="col-lg-6 faq-item">
+              <i class="bx bx-help-circle"></i>
+              <h4>Are there more features coming?</h4>
+              <p>
+Absolutely! Our development team is consistently at work trying to create and polish new features. If you have a feature request, feel free to send an email our support team about it!               </p>
+            </div>
+  
+            <div class="col-lg-6 faq-item">
+              <i class="bx bx-help-circle"></i>
+              <h4>Do you have family plans?</h4>
+              <p>
+Yes, we do! Take a look at our pricing plans for more details regarding this. 
+
+</p>
+            </div>
+  
+            <div class="col-lg-6 faq-item">
+              <i class="bx bx-help-circle"></i>
+              <h4>Do you have a rafferal program?</h4>
+              <p>
+                Yes, we do! We want to reward all of you Houdini Streamers for spreading the word about the app by offering 1 month free service for every user who signs up!
+              </p>
+            </div>
+  
+          </div>
+  
+        </div>
+      </section><!-- End Frequently Asked Questions Section -->
+  
     <!-- ======= Features Section ======= -->
-    <section class="features">
+    <!-- <section class="features">
       <div class="container">
 
         <div class="section-title">
@@ -270,7 +497,7 @@
         </div>
 
       </div>
-    </section><!-- End Features Section -->
+    </section>End Features Section -->
 
   </main><!-- End #main -->
 
@@ -289,6 +516,9 @@
               <input type="email" name="email"><input type="submit" value="Subscribe">
             </form>
           </div>
+          <div style = "display: flex; justify-content: center; margin: 15px;"> 
+          <a class="twitter-timeline" data-width="400" data-height="500" data-theme="dark" href="https://twitter.com/latestmusicapp?ref_src=twsrc%5Etfw">Tweets by latestmusicapp</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+        </div>
         </div>
       </div>
     </div>
@@ -332,7 +562,6 @@
         </div>
       </div>
     </div>
-
     <div class="container">
       <div class="copyright">
         &copy; Copyright <strong><span>Roshaan</span></strong>. All Rights Reserved
@@ -343,6 +572,7 @@
         <!-- Licensing information: https://bootstrapmade.com/license/ -->
         <!-- Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/free-bootstrap-template-corporate-moderna/ -->
         Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
+        <p>This site was designed and published as part of the COMP 333 Software Engineering class at Wesleyan University.</p>
       </div>
     </div>
   </footer><!-- End Footer -->
