--- a/index.html
+++ b/index.html
@@ -52,10 +52,9 @@
         <ul>
           <li><a class="active " href="index.html">Home</a></li>
           <li><a href="about.html">About</a></li>
-          <li><a href="services.html">Services</a></li>
-          <li><a href="team.html">Team</a></li>
+          <li><a href="#team">Team</a></li>
  
-          <li><a href="contact.html">Contact Us</a></li>
+          <!-- <li><a href="contact.html">Contact Us</a></li> -->
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
       </nav><!-- .navbar -->
@@ -70,7 +69,7 @@
       <!-- Slide 1 -->
       <div class="carousel-item active">
         <div class="carousel-container">
-          <lottie-player src="https://assets3.lottiefiles.com/packages/lf20_b8ofyxmg.json"  background="transparent"  speed="1"  style="height: 150px;"  loop autoplay></lottie-player>
+          <lottie-player src="https://assets3.lottiefiles.com/packages/lf20_b8ofyxmg.json"  background="transparent"  speed="1"  style="height: 300px;"  loop autoplay></lottie-player>
 
           <h2 class="animate__animated animate__fadeInDown">Welcome to <span>Houdini Music</span></h2>
           <p class="animate__animated animate__fadeInUp">A music app that learns your taste and reccomends only your favorite songs.</p>
@@ -97,13 +96,13 @@
         </div>
       </div> -->
 
-      <a class="carousel-control-prev" href="#heroCarousel" role="button" data-bs-slide="prev">
+      <!-- <a class="carousel-control-prev" href="#heroCarousel" role="button" data-bs-slide="prev">
         <span class="carousel-control-prev-icon bx bx-chevron-left" aria-hidden="true"></span>
       </a>
 
       <a class="carousel-control-next" href="#heroCarousel" role="button" data-bs-slide="next">
         <span class="carousel-control-next-icon bx bx-chevron-right" aria-hidden="true"></span>
-      </a>
+      </a> -->
 
     </div>
   </section><!-- End Hero -->
@@ -177,9 +176,9 @@
           <div class="col-lg-6 d-flex flex-column justify-content-center p-5">
 
             <div class="icon-box">
-              <div style = "display: flex; justify-content: center;"> 
-              <img style = "height: 100px; cursor: pointer;" src="assets/img/android.png" alt="">
-              <img style = "height: 100px; cursor: pointer;"  src="assets/img/apple_store.png" alt="">
+              <div style = "display: flex; justify-content: center;flex-direction: column; align-items: center;"> 
+              <img style = "width: 300px; cursor: pointer;" src="assets/img/android.png" alt="">
+              <img style = "width: 300px; cursor: pointer;"  src="assets/img/apple_store.png" alt="">
 
             </div>
             <h3 style = "text-align: center;">Give the app a try on your platform of choice! We also have a desktop application!</h3>
