--- a/about.html
+++ b/about.html
@@ -5,12 +5,11 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>About - Moderna Bootstrap Template</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
   <!-- Favicons -->
-  <link href="assets/img/favicon.png" rel="icon">
+  <link href="assets/img/music.jpg" rel="icon">
   <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
 
   <!-- Google Fonts -->
@@ -38,7 +37,7 @@
 
 <body>
 
-    <header id="header" class="fixed-top d-flex align-items-center header-transparent">
+    <header id="header" class="fixed-top d-flex align-items-center header-transparent" style = "background: black;">
         <div class="container d-flex justify-content-between align-items-center">
     
           <div class="logo">
@@ -142,7 +141,7 @@
 
         <div class="section-title">
           <h2>Tetstimonials</h2>
-          <p> Never thought I could get such a good experience out of a music streaming app</p>
+          <p> Here what our customers have to say</p>
         </div>
 
         <div class="testimonials-carousel swiper-container">
@@ -230,8 +229,8 @@
           </div>
 
           <div class="col-lg-3 col-md-6 footer-info">
-            <h3>About Moderna</h3>
-            <p>Cras fermentum odio eu feugiat lide par naso tierra. Justo eget nada terra videa magna derita valies darta donna mare fermentum iaculis eu non diam phasellus.</p>
+            <h3>About Houdini</h3>
+            <p>Houdini is a state of the art music platform available on Android and iOS devices that lets you stream music like never before. </p>
             <div class="social-links mt-3">
               <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>
               <a href="#" class="facebook"><i class="bx bxl-facebook"></i></a>
